--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/ImageAttachmentView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/ImageAttachmentView.xaml
@@ -3,30 +3,29 @@
     x:Class="MSO.StimmApp.Views.ContentViews.AppStimmerEditor.Attachments.ImageAttachmentView"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
-    xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
     xmlns:converter="clr-namespace:MSO.StimmApp.Converter;assembly=MSO.StimmApp"
-    xmlns:forms="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms">
+    xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
+    xmlns:forms="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+    xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp">
     <ContentView.Content>
         <Grid x:Name="Root">
-            <StackLayout Margin="5,5,5,8">
-                <Frame
-                    Padding="0"
-                    CornerRadius="5"
-                    OutlineColor="Transparent">
-                    <forms:CachedImage  x:Name="ImageView" Error="ImageView_OnError"
-                        Aspect="AspectFill"
-                        HeightRequest="300"
-                        Source="{Binding ViewModel.Attachment.AttachmentSource, Converter={StaticResource ImageSourceToImageConverter}}">
-                        <forms:CachedImage.GestureRecognizers>
-                            <TapGestureRecognizer Tapped="TapGestureRecognizer_OnTapped" />
-                        </forms:CachedImage.GestureRecognizers>
-                    </forms:CachedImage>
-                </Frame>
-                <elements:ExpandableEditor Text="{Binding ViewModel.Attachment.Description}" TextColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.AppStimmerAttachmentItemTextColor}" />
-            </StackLayout>
+            <Frame
+                Padding="0"
+                CornerRadius="0"
+                OutlineColor="Transparent">
+                <forms:CachedImage
+                    x:Name="ImageView"
+                    Aspect="AspectFill"
+                    Error="ImageView_OnError"
+                    Source="{Binding ViewModel.Attachment.AttachmentSource, Converter={StaticResource ImageSourceToImageConverter}}">
+                    <forms:CachedImage.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="TapGestureRecognizer_OnTapped" />
+                    </forms:CachedImage.GestureRecognizers>
+                </forms:CachedImage>
+            </Frame>
+            <!--<elements:ExpandableEditor Text="{Binding ViewModel.Attachment.Description}" TextColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.AppStimmerAttachmentItemTextColor}" />-->
             <!--<Frame CornerRadius="5"  Padding="0"  IsVisible="{Binding ViewModel.Attachment, Converter={StaticResource AppStimmerMainPictureAvailabilityToVisibilityConverter}, ConverterParameter=inverted}">
-                <Image Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Images.No_Picture.jpg}"> 
+                <Image Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Images.No_Picture.jpg}">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="NoPhotoPicture_OnTapped">
                         </TapGestureRecognizer>
