--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/VideoAttachmentView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/VideoAttachmentView.xaml
@@ -8,48 +8,28 @@
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
     xmlns:xfShapeView="clr-namespace:XFShapeView;assembly=XFShapeView">
     <ContentView.Content>
-        <StackLayout Margin="5,5,5,8">
+        <Grid>
             <Grid>
-
-                <!--
-                    forms:VideoView
-                    x:Name="VideoView"
-                    AspectMode="AspectFill"
-                    BackgroundColor="Aqua"
-                    HeightRequest="300"
-                    HorizontalOptions="FillAndExpand"
-                    Source="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4"
-                    VerticalOptions="FillAndExpand" />
-                -->
                 <Frame
                     x:Name="VideoPreviewFrame"
                     Padding="0"
                     BackgroundColor="Black"
-                    CornerRadius="5"
-                    HeightRequest="300"
+                    CornerRadius="0"
                     OutlineColor="Transparent">
                     <Frame.GestureRecognizers>
                         <TapGestureRecognizer Tapped="VideoPreviewFrame_OnTapped" />
                     </Frame.GestureRecognizers>
-                    <Grid>
-                        <Image
-                            HeightRequest="60"
-                            HorizontalOptions="Center"
-                            Opacity="0.7"
-                            Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Icons.circle_black_filled.scale-512.png}"
-                            VerticalOptions="Center"
-                            WidthRequest="60" />
-                        <Image
-                            Margin="5,0,0,0"
-                            HeightRequest="40"
-                            HorizontalOptions="Center"
-                            Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Icons.play_white.scale-100.png}"
-                            VerticalOptions="Center"
-                            WidthRequest="40" />
-                    </Grid>
                 </Frame>
             </Grid>
-            <elements:ExpandableEditor Text="{Binding Description}" TextColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.AppStimmerAttachmentItemTextColor}" />
-        </StackLayout>
+
+            <!--  video_call.scale-100.png  -->
+            <Image
+                Margin="5"
+                HeightRequest="15"
+                HorizontalOptions="Start"
+                Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Icons.video_call.scale-100.png}"
+                VerticalOptions="End"
+                WidthRequest="15" />
+        </Grid>
     </ContentView.Content>
 </ContentView>
