--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView_2.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView_2.xaml
@@ -27,7 +27,7 @@
                             x:Name="MainPicture"
                             Grid.RowSpan="2"
                             Aspect="AspectFill"
-                            HeightRequest="360"
+                            HeightRequest="290"
                             HorizontalOptions="Fill"
                             Source="{Binding AppStimmer.Attachments, Converter={StaticResource AppStimmerAttachmentsToMainPictureConverter}}"
                             VerticalOptions="Fill" />
@@ -80,78 +80,109 @@
                             BackgroundColor="White"
                             Orientation="Vertical"
                             Spacing="0">
-                            <Grid>
+                            <Grid Padding="0" BackgroundColor="White">
                                 <Label
-                                    Margin="10"
-                                    FontSize="20"
-                                    HorizontalOptions="Start"
-                                    Text="Medien"
-                                    TextColor="#00897B" />
-                                <Label
-                                    Margin="10"
-                                    FontSize="16"
-                                    HorizontalOptions="End"
+                                    Margin="30,10,30,10"
+                                    FontSize="17"
                                     HorizontalTextAlignment="Center"
-                                    Text="{Binding AppStimmer.Attachments, Converter={StaticResource AppStimmerAttachmentsToMediaAddachmentCountConverter}}"
-                                    TextColor="Gray"
-                                    VerticalOptions="Center"
+                                    Text="Von meinem Galaxy! Von meinem Galaxy! Von meinem Galaxy!"
+                                    TextColor="#838383"
                                     VerticalTextAlignment="Center" />
+                                <elements:TintedSvgCachedImage
+                                    Margin="20"
+                                    HeightRequest="17"
+                                    HorizontalOptions="End"
+                                    Source="resource://MSO.StimmApp.Resources.Icons.edit_pen.svg"
+                                    TintColor="Gray"
+                                    VerticalOptions="Center"
+                                    WidthRequest="17" />
                             </Grid>
 
-                            <xForms:SfListView
+                            <Grid
+                                Margin="15,0,15,0"
                                 BackgroundColor="White"
-                                HeightRequest="100"
-                                IsScrollBarVisible="False"
-                                ItemSize="100"
-                                ItemsSource="{Binding AppStimmer.Attachments, Mode=OneWay, Converter={StaticResource AppStimmerAttachmentsToMediaAttachmentsConverter}}"
-                                Orientation="Horizontal">
-                                <xForms:SfListView.ItemTemplate>
-                                    <DataTemplate>
-                                        <Grid Padding="5,5,5,10">
-                                            <attachments:ImageAttachmentView ViewModel="{Binding ., Converter={StaticResource ImageAttachmentToImageAttachmentViewModel}}" WidthRequest="100">
-                                                <attachments:ImageAttachmentView.IsVisible>
-                                                    <converter:MultiBinding Converter="{StaticResource AppStimmerAttachmentToViewEnabledConverter}" ConverterParameter="Picture">
-                                                        <Binding Path="AttachmentType" />
-                                                        <Binding Path="IsMainAttachment" />
-                                                    </converter:MultiBinding>
-                                                </attachments:ImageAttachmentView.IsVisible>
-                                            </attachments:ImageAttachmentView>
-                                            <attachments:VideoAttachmentView>
-                                                <attachments:VideoAttachmentView.IsVisible>
-                                                    <converter:MultiBinding Converter="{StaticResource AppStimmerAttachmentToViewEnabledConverter}" ConverterParameter="Video">
-                                                        <Binding Path="AttachmentType" />
-                                                        <Binding Path="IsMainAttachment" />
-                                                    </converter:MultiBinding>
-                                                </attachments:VideoAttachmentView.IsVisible>
-                                            </attachments:VideoAttachmentView>
-                                        </Grid>
-                                    </DataTemplate>
-                                </xForms:SfListView.ItemTemplate>
-                            </xForms:SfListView>
-                        </StackLayout>
+                                HeightRequest="30"
+                                HorizontalOptions="Fill">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <Label
+                                    Grid.Column="0"
+                                    FontAttributes="Bold"
+                                    Text="MEDIEN"
+                                    TextColor="#838383"
+                                    VerticalOptions="CenterAndExpand" />
+                                <BoxView
+                                    Grid.Column="1"
+                                    HeightRequest="1"
+                                    HorizontalOptions="Fill"
+                                    VerticalOptions="CenterAndExpand"
+                                    Color="#838383" />
+                            </Grid>
+                            <StackLayout Orientation="Vertical" Spacing="0">
+                                <xForms:SfListView
+                                    BackgroundColor="White"
+                                    HeightRequest="120"
+                                    IsScrollBarVisible="False"
+                                    ItemSize="100"
+                                    ItemsSource="{Binding AppStimmer.Attachments, Mode=OneWay, Converter={StaticResource AppStimmerAttachmentsToMediaAttachmentsConverter}}"
+                                    Orientation="Horizontal">
+                                    <xForms:SfListView.ItemTemplate>
+                                        <DataTemplate>
+                                            <Grid Padding="5,5,5,10">
+                                                <attachments:ImageAttachmentView ViewModel="{Binding ., Converter={StaticResource ImageAttachmentToImageAttachmentViewModel}}" WidthRequest="100">
+                                                    <attachments:ImageAttachmentView.IsVisible>
+                                                        <converter:MultiBinding Converter="{StaticResource AppStimmerAttachmentToViewEnabledConverter}" ConverterParameter="Picture">
+                                                            <Binding Path="AttachmentType" />
+                                                            <Binding Path="IsMainAttachment" />
+                                                        </converter:MultiBinding>
+                                                    </attachments:ImageAttachmentView.IsVisible>
+                                                </attachments:ImageAttachmentView>
+                                                <attachments:VideoAttachmentView>
+                                                    <attachments:VideoAttachmentView.IsVisible>
+                                                        <converter:MultiBinding Converter="{StaticResource AppStimmerAttachmentToViewEnabledConverter}" ConverterParameter="Video">
+                                                            <Binding Path="AttachmentType" />
+                                                            <Binding Path="IsMainAttachment" />
+                                                        </converter:MultiBinding>
+                                                    </attachments:VideoAttachmentView.IsVisible>
+                                                </attachments:VideoAttachmentView>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </xForms:SfListView.ItemTemplate>
+                                </xForms:SfListView>
 
-                        <!--<Grid
-                            Margin="10,0,10,0"
-                            BackgroundColor="White"
-                            HorizontalOptions="StartAndExpand">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-                            <Label Grid.Column="0" Text="Beschreibung" />
-                            <BoxView
-                                Grid.Column="1"
-                                HeightRequest="1"
-                                VerticalOptions="CenterAndExpand"
-                                Color="LightSeaGreen" />
-                        </Grid>-->
+                                <Grid
+                                    Margin="15,10,15,0"
+                                    BackgroundColor="White"
+                                    HeightRequest="30"
+                                    HorizontalOptions="Fill">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Label
+                                        Grid.Column="0"
+                                        FontAttributes="Bold"
+                                        Text="BESCHREIBUNG"
+                                        TextColor="#838383"
+                                        VerticalOptions="CenterAndExpand" />
+                                    <BoxView
+                                        Grid.Column="1"
+                                        HeightRequest="1"
+                                        HorizontalOptions="Fill"
+                                        VerticalOptions="CenterAndExpand"
+                                        Color="#838383" />
+                                </Grid>
+                            </StackLayout>
+                        </StackLayout>
 
                         <Frame
                             Padding="0"
                             BackgroundColor="White"
                             CornerRadius="0"
                             OutlineColor="Transparent">
-                            <elements:ExpandableEditor
+                            <Label
                                 Margin="10,0,10,0"
                                 BackgroundColor="White"
                                 HeightRequest="2000"
