--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/Appstimmen/AppStimmerCardView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/Appstimmen/AppStimmerCardView.xaml
@@ -33,7 +33,7 @@
                                 Grid.RowSpan="3"
                                 Aspect="AspectFill"
                                 HorizontalOptions="Fill"
-                                Source="{Binding Attachments, Converter={StaticResource AppStimmerAttachmentsToMainPictureConverter}}"
+                                Source="{Binding Picture, Converter={StaticResource AppStimmerAttachmentsToMainPictureConverter}}"
                                 VerticalOptions="Fill" />
 
                             <elements:GradientFrame
