--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/EditTextPopupPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/EditTextPopupPage.xaml
@@ -3,14 +3,24 @@
     x:Class="MSO.StimmApp.Views.Pages.EditTextPopupPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
     xmlns:behaviors="clr-namespace:MSO.StimmApp.Behaviors;assembly=MSO.StimmApp"
     xmlns:converter="clr-namespace:MSO.StimmApp.Converter;assembly=MSO.StimmApp"
     xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
     xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
     CloseWhenBackgroundIsClicked="False"
     HasSystemPadding="False">
+    <!--<pages:PopupPage.Animation>
+        <animations:MoveAnimation
+            DurationIn="400"
+            DurationOut="300"
+            EasingIn="SinOut"
+            EasingOut="SinIn"
+            HasBackgroundAnimation="True"
+            PositionIn="Center"
+            PositionOut="Right" />
+    </pages:PopupPage.Animation>-->
     <Grid>
-
         <Grid.GestureRecognizers>
             <TapGestureRecognizer Tapped="TapGestureRecognizer_OnTapped" />
         </Grid.GestureRecognizers>
